[package]
name = "sasbackend_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.1"
chrono = "0.4.38"
once_cell = "1.19.0"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
salvo = {version = "0.68.0", features = ["quinn", "cors", "logging"]}
serde = "1.0.203"
serde_json = "1.0.117"
surrealdb = "1.5.1"
tokio = "1.38.0"
tracing-subscriber = "0.3.18"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
